--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -413,6 +413,15 @@
     </servlet-mapping>
 
     <servlet>
+        <servlet-name>DBGifReader2</servlet-name>
+        <servlet-class>servlet_examples.DBGifReaderPoolConnection</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>DBGifReader2</servlet-name>
+        <url-pattern>/DBGifReader2</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
         <servlet-name>HelloWorldGraphics</servlet-name>
         <servlet-class>servlet_examples.HelloWorldGraphics</servlet-class>
     </servlet>
